src/main/kotlin/com/example/personal_account/errors/ValidationException.kt
package com.example.personal_account.errors

class ValidationException(message: String) : RuntimeException(message)